--- a/ChangeColor/main.html
+++ b/ChangeColor/main.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Change Color</title>
 </head>
 <body>
-  
+
+  <p>Células</p>
+
+  <button type="button" id="random" onclick="setRandomColor()">Random Color</button>
+
+  <script src=""></script>
 </body>
 </html>
