--- a/ChangeColor/main.html
+++ b/ChangeColor/main.html
@@ -10,8 +10,16 @@
 
   <p>Células</p>
 
-  <button type="button" id="random" onclick="setRandomColor()">Random Color</button>
+  <div class= "boxes">
+    <div id = "div-left"> po</div>
+    <div id = "div-right"> pe</div>
+    <div id = "div-center"> pa</div>
+  </div>
+  <button type="button" id="random" onclick="setColor()">Random Color</button>
 
-  <script src=""></script>
+  <script src="script.js"></script>
+
+  <script src = "https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.6.1/randomColor.js"></script>
+
 </body>
 </html>
