--- a/ChangeColor/main.html
+++ b/ChangeColor/main.html
@@ -9,13 +9,8 @@
 
 </head>
 <body>
-
+  <div id="black"></div>
   <h1>Random Colors</h1>
-<!--hue – Controls the hue of the generated color. 
-  You can pass a string representing a color name: red, orange, 
-  yellow, green, blue, purple, pink and monochrome-->
-
-
 
   <section class= "boxes">
     <div id = "div-left" style="background-color:rgb(215 2 112)"> </div>
@@ -43,9 +38,10 @@
     </div>
   </section>
 
+
+
   <script src="script.js"></script>
 
   <script src = "https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.6.1/randomColor.js"></script>
-
 </body>
 </html> 
