color hexadecimal code added (again)

--- a/ChangeColor/main.html
+++ b/ChangeColor/main.html
@@ -13,8 +13,9 @@
   <h1>Random Colors</h1>
 
   <section class= "boxes">
-    <div id = "div-left" style="background-color:rgb(215 2 112)"> </div>
-    <div id = "div-right" style="background-color: rgb(115 79 150)"> </div>
+    
+    <div id = "div-left" style="background-color:rgb(215 2 112)"></div>
+    <div id = "div-right" style="background-color: rgb(115 79 150)"></div>
     <div id = "div-center" style="background-color: rgb(0 56 168)"></div>
   </section>
 
@@ -37,6 +38,8 @@
       Luminosity:<input type="range" min="0" max="10" step="5" id="value" >
     </div>
   </section>
+
+  <p id="finalcolors">Colors: [#ef1c27,#a8251c,#cc5586]</p>
 
 
 
