--- a/ChangeColor/main.html
+++ b/ChangeColor/main.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Change Color</title>
+  <title>Random Colors</title>
   <link rel="stylesheet" href="stylesheet.css" media="screen">
 
 </head>
@@ -32,6 +32,7 @@
         <option value="purple">Purple</option>
         <option value="pink">Pink</option>
         <option value="monochrome">Monochrome</option>
+        <option value = "random">Random</option>
       </select>
     </div>
     <div id="luminosity">
