div constants replace by a for..in loop

--- a/ChangeColor/main.html
+++ b/ChangeColor/main.html
@@ -14,9 +14,9 @@
 
   <section class= "boxes">
     
-    <div id = "div-left" style="background-color:rgb(215 2 112)"></div>
-    <div id = "div-right" style="background-color: rgb(115 79 150)"></div>
-    <div id = "div-center" style="background-color: rgb(0 56 168)"></div>
+    <div name = "box" style="background-color:rgb(215 2 112)"></div>
+    <div name = "box" style="background-color: rgb(115 79 150)"></div>
+    <div name = "box" style="background-color: rgb(0 56 168)"></div>
   </section>
 
   <button type="button" id="random" onclick="setColor()">Generate</button>
